# axochat_server

./: .gitignore  Cargo.toml  LICENSE  PROTOCOL.md  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: auth.rs  chat.rs  config.rs  error.rs  main.rs  message.rs  moderation.rs
src/chat/: connect.rs  handler.rs  id.rs  mod.rs  session.rs
src/chat/handler/: ban.rs  count.rs  jwt.rs  message.rs  mod.rs  mojang.rs
