[package]
name = "axochat"
version = "0.4.1"
authors = ["frozolotl <frozolotl@protonmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
structopt = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = "0.1"
toml = "0.5"
rand = "0.6"
rand_hc = "0.1"
uuid = { version = "0.7", features = ["serde", "u128"] }

openssl = { version = "0.10", features = ["v110"] }
jsonwebtoken = "5.0"
actix-web = { version = "0.7", features = ["alpn"] }
actix = "0.7"
futures = "0.1"
url = "1.7"
