[package]
name = "axochat"
version = "0.6.0"
authors = ["frozolotl <frozolotl@protonmail.com>"]
edition = "2018"

[features]
default = ["ssl"]

ssl = ["openssl", "actix-web/alpn"]
rust-tls = ["rustls", "actix-web/rust-tls"]

[dependencies]
log = "0.4"
env_logger = "0.6"
structopt = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = "0.2"
toml = "0.5"
humantime = "1.2"
rand = "0.6"
rand_hc = "0.1"
uuid = { version = "0.7", features = ["serde", "u128"] }
derive_more = "0.14"
failure = "0.1"

openssl = { version = "0.10", features = ["v110"], optional = true }
rustls = { version = "0.14", optional = true }
ring = "0.13"
jsonwebtoken = "5.0"
actix-web = "0.7"
actix = "0.7"
futures = "0.1"
url = "1.7"
