[package]
name = "axochat"
version = "0.8.0"
authors = ["frozolotl <frozolotl@protonmail.com>"]
edition = "2018"

[features]
default = ["ssl"]

ssl = ["openssl", "actix-web/ssl"]
rust-tls = ["rustls", "actix-web/rust-tls"]

[dependencies]
log = "0.4"
env_logger = "0.6"
structopt = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = "0.2"
toml = "0.5"
humantime = "1.2"
rand = "0.6"
rand_hc = "0.1"
uuid = { version = "0.7", features = ["serde", "u128"] }
derive_more = "0.15.0"
snafu = "0.4"

openssl = { version = "0.10", features = ["v110"], optional = true }
rustls = { version = "0.15", optional = true }
ring = "0.14"
jsonwebtoken = "6.0"
actix-web = "1.0"
actix-web-actors = "1.0"
actix = "0.8"
futures = "0.1"
url = "1.7"
